# discord-hs

./: LICENSE  README.md  discord-hs.cabal  discord.cabal  package.yaml
app/: Main.hs
src/: Discord.hs
src/Discord/: Client.hs  Gateway.hs  Main.hs  Monad.hs  Rest.hs  Types.hs
src/Discord/Gateway/: Internal.hs
src/Discord/Rest/: Channel.hs
src/Discord/Types/: Common.hs  Gateway.hs  Rest.hs
test/: GatewaySpec.hs
